--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,13 +23,12 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: stable
-
       - name: Import GPG key
+          id: import_gpg
           uses: crazy-max/ghaction-import-gpg@v6
           with:
             gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
             passphrase: ${{ secrets.PASSPHRASE }}
-
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v5
         with:
