--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -33,9 +33,10 @@ archives:
 
 signs:
   - artifacts: checksum
+    cmd: gpg2
     args:
       - "--batch"
-      - "--local-user"
+      - "-u"
       - "{{ .Env.GPG_FINGERPRINT }}"
       - "--output"
       - "${signature}"
