Stage command and general cleanup

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,12 @@
 {
     "cSpell.words": [
+        "bubbletea",
+        "charmbracelet",
         "lipgloss",
-        "sliceutils"
+        "pgdown",
+        "pgup",
+        "sliceutils",
+        "textinput",
+        "wfapi"
     ]
 }
