--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -15,6 +15,8 @@ builds:
       - windows
       - darwin
     binary: jenkins
+    ldflags:
+      - -s -w -X jenkins/cmd.Version={{.Version}}
 
 archives:
   - format: tar.gz
